--- a/src/main/resources/static/css/character.css
+++ b/src/main/resources/static/css/character.css
@@ -5,12 +5,21 @@
 }
 
 .button-container {
-    height: 500px;
     width: 15%;
     margin-right: 3%;
     margin-top: 3%;
     float: right;
     position: relative;
+}
+
+.expandable {
+    overflow: hidden;
+    transition: all .5s ease-in-out;
+    height: 0;
+}
+
+.shown {
+    height: 500px;
 }
 
 .button-row {
@@ -20,7 +29,61 @@
 }
 
 .network-button {
-    z-index:10;
+    font-family: 'Verdana', serif;
+    z-index: 10;
+    font-size: x-large;
+    font-weight: bold;
+    background-color: #959079;
+    border-radius: 10px;
+    box-shadow: 2px 5px 5px #898989;
+    transition: all 0.5s;
+    position: relative;
+    line-height: 50px;
+    text-align: center;
+}
+
+.network-button-active {
+    font-family: 'Verdana', serif;
+    z-index: 10;
+    font-size: x-large;
+    font-weight: bold;
     background-color: goldenrod;
     border-radius: 10px;
+    box-shadow: 2px 5px 5px #898989;
+    transition: all 0.5s;
+    position: relative;
+    line-height: 50px;
+    text-align: center;
+}
+
+.network-button-active::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    background-color: rgba(255,255,255,0.1);
+    transition: all 0.3s;
+}
+.network-button-active:hover::before {
+    opacity: 0 ;
+    transform: scale(0.5,0.5);
+}
+.network-button-active::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    opacity: 0;
+    transition: all 0.3s;
+    transform: scale(1.2,1.2);
+}
+.network-button-active:hover::after {
+    opacity: 1;
+    transform: scale(1,1);
 }
