--- a/src/main/resources/static/css/general.css
+++ b/src/main/resources/static/css/general.css
@@ -15,3 +15,7 @@
     background: rgb(228,228,228);
     background: linear-gradient(90deg, rgba(228,228,228,1) 20%, rgba(242,242,242,1) 87%, rgba(242,242,242,1) 100%);
 }
+
+.hidden {
+    display: none;
+}
