--- a/src/main/resources/templates/character.html
+++ b/src/main/resources/templates/character.html
@@ -15,6 +15,17 @@
 <div class="container-fluid full">
     <div class="container-fluid bar"></div>
     <div class="container-fluid main">
+        <div class="empty-label hidden">
+            <h1>Персонажей пока нет</h1>
+            <span>Попробуйте их добавить</span>
+        </div>
+        <div id="opt_buttons" class="container opt-button-container expandable">
+            <div class="row button-row">
+                <div class="network-button-active network-select network-back">
+                    <span>Назад</span>
+                </div>
+            </div>
+        </div>
         <div id="network_buttons" class="container button-container expandable">
             <div class="row button-row">
                 <div class="network-button-active network-select network-choose">
