--- a/src/main/resources/static/css/general.css
+++ b/src/main/resources/static/css/general.css
@@ -6,7 +6,65 @@
 
 .bar {
     background-color: #333333;
+    color: goldenrod;
     height: 6%;
+}
+
+.navcell {
+    cursor: pointer;
+    width: 30%;
+    max-width: 20%;
+    position: relative;
+    height: 100%;
+    text-align: center;
+    line-height: 50px;
+    font-size: x-large;
+}
+
+.navcell-first {
+    width: 15%;
+    text-align: left !important;
+}
+
+.navcell::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    background-color: rgba(255,255,255,0.1);
+    transition: all 0.3s;
+}
+.navcell:hover::before {
+    opacity: 0 ;
+    transform: scale(0.5,0.5);
+}
+.navcell::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    opacity: 0;
+    transition: all 0.3s;
+    transform: scale(1.2,1.2);
+}
+.navcell:hover::after {
+    opacity: 1;
+    transform: scale(1,1);
+}
+
+.delimiter {
+    margin-top: auto;
+    margin-bottom: auto;
+    padding: 0;
+    height: 60%;
+    max-width: 3px !important;
+    background-color: goldenrod;
 }
 
 .main {
