--- a/src/main/resources/templates/character.html
+++ b/src/main/resources/templates/character.html
@@ -5,8 +5,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://unpkg.com/vis-network/standalone/umd/vis-network.min.js"></script>
-    <script type="text/javascript" src="js/character.js"></script>
     <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/huebee@2/dist/huebee.min.css">
+    <script src="https://unpkg.com/huebee@2/dist/huebee.pkgd.min.js"></script>
+    <script type="text/javascript" src="js/character.js"></script>
     <link href="css/general.css" rel="stylesheet">
     <link href="css/character.css" rel="stylesheet">
     <meta charset="UTF-8">
@@ -14,7 +16,17 @@
 </head>
 <body>
 <div class="container-fluid full">
-    <div class="container-fluid bar"></div>
+    <div class="container-fluid bar">
+        <div class="row" style="height: 100%">
+            <div class="col-sm-1 navcell navcell-first">Персонажи</div>
+            <div class="delimiter" style="max-width:3px; background-color: goldenrod;"></div>
+            <div id="new_character" class="col-sm-3 navcell">Новый персонаж</div>
+            <div class="delimiter" style="max-width:3px; background-color: goldenrod;"></div>
+            <div id="new_relation" class="col-sm-3 navcell">Новая связь</div>
+            <div class="delimiter" style="max-width:3px; background-color: goldenrod;"></div>
+            <div id="new_relation_type" class="col-sm-3 navcell">Новый тип связи</div>
+        </div>
+    </div>
     <div class="container-fluid main">
         <div class="empty-label hidden">
             <h1>Персонажей пока нет</h1>
@@ -70,14 +82,14 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="char_modal_label">Редактировать персонажа</h5>
+                <h5 class="modal-title" id="char_modal_label">Персонаж</h5>
             </div>
             <div class="modal-body">
                 <form>
                     <input type="hidden" id="char_id_input">
                     <div class="form-group">
                         <label for="name_input">Имя</label>
-                        <input type="text" class="form-control" id="name_input" aria-describedby="emailHelp" placeholder="Имя персонажа">
+                        <input type="text" class="form-control" id="name_input" placeholder="Имя персонажа">
                     </div>
                     <div class="form-group">
                         <label for="image_input">Ссылка на картинку</label>
@@ -105,7 +117,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="rel_modal_label">Редактировать связь</h5>
+                <h5 class="modal-title" id="rel_modal_label">Связь</h5>
             </div>
             <div class="modal-body">
                 <form>
@@ -147,6 +159,32 @@
             <div class="modal-footer">
                 <button id="delete_rel_modal_close" type="button" class="btn btn-secondary" data-dismiss="modal">Отмена</button>
                 <button id="delete_rel" type="button" class="btn btn-danger">Удалить</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="type_modal" tabindex="-1" role="dialog" aria-labelledby="type_modal_label" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="type_modal_label">Тип связи</h5>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <div class="form-group">
+                        <label for="type_label_input">Название</label>
+                        <input type="text" class="form-control" id="type_label_input" placeholder="Название связи">
+                    </div>
+                    <div class="form-group">
+                        <label for="image_input">Цвет</label>
+                        <input class="color-input" />
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button id="type_modal_close" type="button" class="btn btn-secondary" data-dismiss="modal">Отмена</button>
+                <button id="type_save" type="button" class="btn btn-primary modal-network-button network-button-active">Сохранить</button>
             </div>
         </div>
     </div>
