--- a/src/main/resources/templates/character.html
+++ b/src/main/resources/templates/character.html
@@ -20,11 +20,11 @@
         <div class="row" style="height: 100%">
             <div class="col-sm-1 navcell navcell-first">Персонажи</div>
             <div class="delimiter" style="max-width:3px; background-color: goldenrod;"></div>
-            <div id="new_character" class="col-sm-3 navcell">Новый персонаж</div>
+            <div id="new_character" class="col-sm-3 navcell navbutton">Новый персонаж</div>
             <div class="delimiter" style="max-width:3px; background-color: goldenrod;"></div>
-            <div id="new_relation" class="col-sm-3 navcell">Новая связь</div>
+            <div id="new_relation" class="col-sm-3 navcell navbutton">Новая связь</div>
             <div class="delimiter" style="max-width:3px; background-color: goldenrod;"></div>
-            <div id="new_relation_type" class="col-sm-3 navcell">Новый тип связи</div>
+            <div id="new_relation_type" class="col-sm-3 navcell navbutton">Новый тип связи</div>
         </div>
     </div>
     <div class="container-fluid main">
@@ -157,7 +157,7 @@
                 Вы уверены, что хотите удалить данный элемент? Это действие нельзя откатить.
             </div>
             <div class="modal-footer">
-                <button id="delete_rel_modal_close" type="button" class="btn btn-secondary" data-dismiss="modal">Отмена</button>
+                <button id="delete_rel_close" type="button" class="btn btn-secondary" data-dismiss="modal">Отмена</button>
                 <button id="delete_rel" type="button" class="btn btn-danger">Удалить</button>
             </div>
         </div>
