--- a/src/main/resources/templates/timeline.html
+++ b/src/main/resources/templates/timeline.html
@@ -8,10 +8,12 @@
     <link href="https://unpkg.com/vis-timeline@latest/styles/vis-timeline-graph2d.min.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://unpkg.com/huebee@2/dist/huebee.min.css">
     <script src="https://unpkg.com/huebee@2/dist/huebee.pkgd.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap-datepicker.js"></script>
+    <link href="css/bootstrap-datepicker.css" rel="stylesheet">
     <script type="text/javascript" src="js/timeline.js"></script>
     <link href="css/general.css" rel="stylesheet">
     <meta charset="UTF-8">
-    <title>Characters</title>
+    <title>Timeline</title>
 </head>
 <body>
 <div class="container-fluid full">
@@ -29,6 +31,82 @@
     <div class="container-fluid main">
         <div style="padding-top: 35%;max-width: 100%;">
             <div id="timeline_vis"></div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="event_modal" tabindex="-1" role="dialog" aria-labelledby="event_modal_label" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="event_modal_label">Событие</h5>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <input type="hidden" id="event_id_input">
+                    <div class="form-group">
+                        <label for="event_title_input">Название</label>
+                        <input type="text" class="form-control" id="event_title_input" placeholder="Название события">
+                    </div>
+                    <div class="form-group">
+                        <label for="event_image_input">Ссылка на картинку</label>
+                        <input type="text" class="form-control" id="event_image_input" placeholder="Ссылка">
+                    </div>
+                    <div class="form-group">
+                        <label for="event_start_input">Дата (дата начала, если период)</label>
+                        <input id="event_start_input" class="datepicker" data-date-format="dd.mm.yyyy">
+                    </div>
+                    <div class="form-group">
+                        <label for="event_end_input">Дата окончания (если период)</label>
+                        <input id="event_end_input" class="datepicker" data-date-format="dd.mm.yyyy">
+                    </div>
+                    <div class="form-group">
+                        <label for="event_characters">Участники</label>
+                        <select id="event_characters" class="form-select" multiple>
+                            <option selected>0</option>
+                            <option value="1">One</option>
+                            <option value="2">Two</option>
+                            <option value="3">Three</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="event_chapters">Главы</label>
+                        <select id="event_chapters" class="form-select" multiple>
+                            <option selected>0</option>
+                            <option value="1">One</option>
+                            <option value="2">Two</option>
+                            <option value="3">Three</option>
+                        </select>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button id="modal_event_close" type="button" class="btn btn-secondary" data-dismiss="modal">Отмена</button>
+                <button id="event_save" type="button" class="btn btn-primary modal-network-button network-button-active">Сохранить</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="chapter_modal" tabindex="-1" role="dialog" aria-labelledby="chapter_modal_label" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="chapter_modal_label">Глава</h5>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <input type="hidden" id="chapter_id_input">
+                    <div class="form-group">
+                        <label for="chapter_title_input">Название</label>
+                        <input type="text" class="form-control" id="chapter_title_input" placeholder="Название главы">
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button id="modal_chapter_close" type="button" class="btn btn-secondary" data-dismiss="modal">Отмена</button>
+                <button id="chapter_save" type="button" class="btn btn-primary modal-network-button network-button-active">Сохранить</button>
+            </div>
         </div>
     </div>
 </div>
