Added event and chapter updation

--- a/src/main/resources/templates/timeline.html
+++ b/src/main/resources/templates/timeline.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="js/bootstrap-datepicker.js"></script>
     <link href="css/bootstrap-datepicker.css" rel="stylesheet">
     <script type="text/javascript" src="js/timeline.js"></script>
+    <link href="css/timeline.css" rel="stylesheet">
     <link href="css/general.css" rel="stylesheet">
     <meta charset="UTF-8">
     <title>Timeline</title>
@@ -29,7 +30,7 @@
         </div>
     </div>
     <div class="container-fluid main">
-        <div style="padding-top: 35%;max-width: 100%;">
+        <div style="padding-top: 10%;max-width: 100%;">
             <div id="timeline_vis"></div>
         </div>
     </div>
@@ -62,21 +63,11 @@
                     </div>
                     <div class="form-group">
                         <label for="event_characters">Участники</label>
-                        <select id="event_characters" class="form-select" multiple>
-                            <option selected>0</option>
-                            <option value="1">One</option>
-                            <option value="2">Two</option>
-                            <option value="3">Three</option>
-                        </select>
+                        <select id="event_characters" class="form-select" multiple></select>
                     </div>
                     <div class="form-group">
                         <label for="event_chapters">Главы</label>
-                        <select id="event_chapters" class="form-select" multiple>
-                            <option selected>0</option>
-                            <option value="1">One</option>
-                            <option value="2">Two</option>
-                            <option value="3">Three</option>
-                        </select>
+                        <select id="event_chapters" class="form-select" multiple></select>
                     </div>
                 </form>
             </div>
