Added timeline redraw and char <-> timeline button

--- a/src/main/resources/templates/character.html
+++ b/src/main/resources/templates/character.html
@@ -18,7 +18,7 @@
 <div class="container-fluid full">
     <div class="container-fluid bar">
         <div class="row" style="height: 100%">
-            <div class="col-sm-1 navcell navcell-first">Персонажи</div>
+            <div class="col-sm-1 navcell navcell-first button-main"><span class="text">Персонажи</span><span>Таймлайн</span></div>
             <div class="delimiter" style="max-width:3px; background-color: goldenrod;"></div>
             <div id="new_character" class="col-sm-3 navcell navbutton">Новый персонаж</div>
             <div class="delimiter" style="max-width:3px; background-color: goldenrod;"></div>
