--- a/src/main/resources/templates/timeline.html
+++ b/src/main/resources/templates/timeline.html
@@ -20,7 +20,7 @@
 <div class="container-fluid full">
     <div class="container-fluid bar">
         <div class="row" style="height: 100%">
-            <div class="col-sm-1 navcell navcell-first">Таймлайн</div>
+            <div class="col-sm-1 navcell navcell-first button-main"><span class="text">Таймлайн</span><span>Персонажи</span></div>
             <div class="delimiter" style="max-width:3px; background-color: goldenrod;"></div>
             <div id="new_event" class="col-sm-3 navcell navbutton">Новое событие</div>
             <div class="delimiter" style="max-width:3px; background-color: goldenrod;"></div>
@@ -43,7 +43,7 @@
             </div>
         </div>
 
-        <div style="padding-top: 10%;max-width: 100%;">
+        <div id="t-container" style="padding-top: 10%;max-width: 100%;">
             <div id="timeline_vis"></div>
         </div>
     </div>
