Fixed bugs with click event

--- a/src/main/resources/templates/timeline.html
+++ b/src/main/resources/templates/timeline.html
@@ -43,7 +43,7 @@
             </div>
         </div>
 
-        <div id="t-container" style="padding-top: 10%;max-width: 100%;">
+        <div id="t-container" style="padding-top: 10%;max-width: 100%;min-width: 100%;bottom: 0;position: absolute;">
             <div id="timeline_vis"></div>
         </div>
     </div>
